# madurogg

./: .gitignore  PRIZE_DISTRIBUTION.md  claude.md  package-lock.json  package.json
.vercel/: project.json
app/: globals.css  layout.tsx  page.tsx
app/api/generate/: route.ts
contracts/: Anchor.toml  package.json  test-init.mjs  test-init.ts  tsconfig.json
contracts/.anchor/test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  test-ledger-log.txt  validator-keypair.json  vote-account-keypair.json
contracts/.anchor/test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1767541602824274  MANIFEST-000021  OPTIONS-000027  OPTIONS-000029
contracts/programs/trumpworm/: Cargo.toml
contracts/programs/trumpworm/src/: lib.rs
contracts/scripts/: devnet-e2e-test.mjs  devnet-e2e-test.ts
contracts/tests/: trumpworm.ts
public/: admin.html  game.html  how.html  index.html  stats.html
public/css/: game.css  style.css
public/js/: game.js  input.js  landing.js  network.js  render.js  wallet.js
scripts/: create-prize-wallet.mjs  prize-distribution.mjs
server/: arena.js  game.js  index.js  player.js  pump.js  rewards.js  room.js  solana.js
