[package]
name = "trumpworm"
version = "0.1.0"
description = "TRUMPWORM.IO Reward Distribution Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trumpworm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
